--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#ffffff",
   "icon": "/img/uploads/img_3463.png",
   "store_id": 51477,
-  "description": "Só Grand Granola é Granola.",
+  "description": "Só Grand Granola é Granola..",
   "large_icon": "/img/uploads/img_3463.png"
 }
